.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: builders-server
  namespace: builders
  labels:
    app: builders-server
spec:
  selector:
    matchLabels:
      app: builders-server
  replicas: 1
  template:
    metadata:
      labels:
        app: "builders-server"
    spec:
      containers:
        - name: builders-server
          image: "infectiionz/builders"
          resources:
            requests:
              cpu: "0.2"
              memory: 100Mi
            limits:
              cpu: "0.2"
              memory: 100Mi

          startupProbe:
            httpGet:
              path: /
              port: 3030
            periodSeconds: 2
            failureThreshold: 15

          readinessProbe:
            httpGet:
              path: /
              port: 3030
            periodSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 3030
            periodSeconds: 5
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
